--- a/Cpp_work_0315/maze_0315/maze_0315.vcxproj
+++ b/Cpp_work_0315/maze_0315/maze_0315.vcxproj
@@ -115,11 +115,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="_156_17.cpp" />
     <ClCompile Include="_193_15.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test.h" />
+    <ClInclude Include="_193_16.h" />
+    <ClInclude Include="_219.3_5_8_9.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
