--- a/Cpp_work_0315/maze_0315/maze_0315.vcxproj.filters
+++ b/Cpp_work_0315/maze_0315/maze_0315.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClCompile Include="_156_17.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="_193_16.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="_219.3_5_8_9.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
