--- a/Cpp_work_0315/maze_0315/maze_0315.vcxproj.filters
+++ b/Cpp_work_0315/maze_0315/maze_0315.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="test.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="_306_4_5_8.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="test.h">
@@ -33,6 +36,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="_219.3_5_8_9.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="_306_4_5_8_9_11_12.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
