--- a/maze_0418__Queue_IO/maze_0418__Queue_IO/maze_0418__Queue_IO.vcxproj
+++ b/maze_0418__Queue_IO/maze_0418__Queue_IO/maze_0418__Queue_IO.vcxproj
@@ -116,6 +116,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Stack_Queue.cc" />
+    <ClCompile Include="test.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
