--- a/maze_0522_OJ（3）/maze_0522_c++OJ/maze_0522_c++OJ.vcxproj
+++ b/maze_0522_OJ（3）/maze_0522_c++OJ/maze_0522_c++OJ.vcxproj
@@ -117,6 +117,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="TEST.cpp" />
+    <ClCompile Include="test2.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
