--- a/maze_0522_OJ（3）/maze_0522_c++OJ/maze_0522_c++OJ.vcxproj.filters
+++ b/maze_0522_OJ（3）/maze_0522_c++OJ/maze_0522_c++OJ.vcxproj.filters
@@ -15,6 +15,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="test2.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
     <ClCompile Include="TEST.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
