c语言作业/algorithm_算法总结/algorithm.cc

--- a/c语言作业/algorithm_算法总结/algorithm_算法总结.vcxproj.filters
+++ b/c语言作业/algorithm_算法总结/algorithm_算法总结.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="algorithm.cc">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="test.cc">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
