--- a/maze_0909/maze_0909/maze_0909.vcxproj
+++ b/maze_0909/maze_0909/maze_0909.vcxproj
@@ -20,8 +20,8 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
-    <ProjectGuid>{C18B0965-5860-4AE8-981F-BCC41259626C}</ProjectGuid>
-    <RootNamespace>maze0902</RootNamespace>
+    <ProjectGuid>{870D5637-FD54-4A2D-9A65-85E3DB2E0746}</ProjectGuid>
+    <RootNamespace>maze0909</RootNamespace>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -115,7 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
+    <ClCompile Include="test.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
