--- a/2020_2_28/2020_2_28/2020_2_28.vcxproj.filters
+++ b/2020_2_28/2020_2_28/2020_2_28.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="tesr.cpp">
+    <ClCompile Include="tesr.c">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
