--- a/2020_2_28/2020_2_28/2020_2_28.vcxproj
+++ b/2020_2_28/2020_2_28/2020_2_28.vcxproj
@@ -115,7 +115,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="tesr.c" />
+    <ClCompile Include="tesr.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
